Add high_volume_throttle
