# rest-java/src/main/java/org/hiero/mirror/restjava/controller/NetworkController.java
@@ -4,12 +4,15 @@ package org.hiero.mirror.restjava.controller;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hiero.mirror.restjava.common.Constants.APPLICATION_JSON;
+import static org.hiero.mirror.restjava.common.Constants.HIGH_VOLUME_THROTTLE;
 import static org.hiero.mirror.restjava.common.Constants.TIMESTAMP;
 
 import com.google.common.collect.ImmutableSortedMap;
 import com.hedera.hapi.node.base.Transaction;
 import com.hedera.pbj.runtime.ParseException;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
+import jakarta.validation.constraints.Max;
+import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 import java.util.ArrayList;
@@ -99,10 +102,12 @@ final class NetworkController {
             value = "/fees")
     FeeEstimateResponse estimateFees(
             @RequestBody @NotNull byte[] body,
-            @RequestParam(defaultValue = "INTRINSIC", required = false) FeeEstimateMode mode) {
+            @RequestParam(defaultValue = "INTRINSIC", required = false) FeeEstimateMode mode,
+            @RequestParam(name = HIGH_VOLUME_THROTTLE, defaultValue = "0", required = false) @Min(0) @Max(10000)
+                    int highVolumeThrottle) {
         try {
             final var transaction = Transaction.PROTOBUF.parse(Bytes.wrap(body));
-            return toResponse(feeEstimationService.estimateFees(transaction, mode));
+            return toResponse(feeEstimationService.estimateFees(transaction, mode, highVolumeThrottle));
         } catch (ParseException e) {
             throw new IllegalArgumentException("Unable to parse transaction", e);
         }
